@@ -4,10 +4,10 @@
 # $Id$
 
 import icemac.addressbook.testing
-
+import zope.testing.renormalizing
 
 def test_suite():
-    return icemac.addressbook.testing.FunctionalDocFileSuite(
+    suite = icemac.addressbook.testing.FunctionalDocFileSuite(
         "browser/addressbook/addressbook.txt",
         "browser/authentication/login.txt",
         "browser/entities/bugfix.txt",
@@ -19,7 +19,6 @@ def test_suite():
         "browser/export/userfields.txt",
         "browser/keyword/keyword.txt",
         "browser/masterdata/masterdata.txt",
-        "browser/metadata.txt",
         "browser/person/file.txt",
         "browser/person/person.txt",
         "browser/person/translation.txt",
@@ -27,3 +26,11 @@ def test_suite():
         "browser/rootfolder/rootfolder.txt",
         "browser/search/search.txt",
         )
+    suite.addTest(
+        icemac.addressbook.testing.FunctionalDocFileSuite(
+            # Tests which do not need the default <DATETIME> normalizer:
+            "browser/metadata.txt",
+            checker=zope.testing.renormalizing.RENormalizing([])
+            ))
+    return suite
+
